Fix Toggle component text misalignment in Firefox

--- a/src/views/signin/_signin.sass
+++ b/src/views/signin/_signin.sass
@@ -74,6 +74,7 @@
       position: relative
       display: block
       margin: 10px auto 35px
+      font-weight: 400
 
 
   .has-invite
